# ds4u

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TodoList  build.rs
.gitea/workflows/: aur-publish.yml
.github/: FUNDING.yml
src/: app.rs  backend.rs  common.rs  constants.rs  daemon.rs  dualsense.rs  firmware.rs  firmware_controller.rs  haptics_stream.rs  input_poller.rs  inputs.rs  ipc.rs  main.rs  profiles.rs  settings.rs  state.rs  style.rs  theme.rs  transform.rs  usb_haptics.rs  util.rs
src/ui/: audio.rs  firmware.rs  gyroscope.rs  haptics.rs  inputs.rs  lightbar.rs  mod.rs  navigation.rs  profiles.rs  settings.rs  sidebar.rs  sticks.rs  touchpad.rs  triggers.rs  widgets.rs
