[package]
name = "ds4u"
version = "0.1.0"
edition = "2024"
description = "DualSense 4 You"

[dependencies]
anyhow = "1.0.101"
crc = "3.4.0"
dirs = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg", "svg_text", "file"] }
hidapi = "2.6.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = []

[build-dependencies]
