[package]
name = "ds4u"
version = "0.1.0"
edition = "2024"
description = "DualSense 4 You"
authors = [ "deadYokai" ]
readme = "README.md"
repository = "https://git.yokai.digital/deadYokai/ds4u"
license = "MIT"
keywords = [ "dualsense", "controller" ]

[dependencies]
anyhow = "1.0.101"
crc = "3.4.0"
dirs = "6.0.0"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg", "svg_text", "file"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["native-tls", "json"] }
hidapi = { version = "2.6.6", default-features = false, features = [
  "linux-native",
] }
udev = "0.9.3"
libc = "0.2.186"
alsa = "0.11.0"

[features]
default = []
unstable = []

[build-dependencies]
roxmltree = "0.21.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev-release]
inherits = "release"
debug = false
strip = "none"
